# QNNAS-Implementation

./: .coveragerc  .dockerignore  .env.example  Dockerfile.backend  Dockerfile.frontend  INSTALL_AND_USAGE.md  Makefile  README.md  alembic.ini  child_net_trainer.py  controller_network.py  controller_trainer.py  dataset.py  digits_autoencoder.py  digits_encoder.pt  docker-compose-postgres.yml  docker-compose.yml  environment.py  main.py  new_model_best_weights.pth  pyproject.toml  train.py  train_encoder.py  utils.py
src/api/: backend.py  routes.py
src/api/dtos/: training_session_dto.py
src/config/: settings.py
src/data/: __init__.py  base_autoencoder.py  dataset.py  digits_autoencoder.py  train_encoder.py
src/domain/: db.py  domain.py
src/environment/: __init__.py  environment.py
src/repositories/: training_session_repo.py
src/training/: __init__.py  child_net_trainer.py  controller_network.py  controller_trainer.py  train.py
src/ui/: app.py
src/utils/: utils.py
tests/: test_agent.py  test_routes.py
