[project]
name = "qnnas"
version = "0.1.0"
description = "Quantum Neural Network Architecture Search"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "dill==0.4.0",
    "fastapi==0.115.12",
    "fastdtw==0.3.4",
    "ffmpy==0.5.0",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "fsspec==2025.3.2",
    "gradio==5.29.0",
    "gradio_client==1.10.0",
    "groovy==0.1.2",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "h11==0.16.0",
    "hf-xet==1.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.31.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "joblib==1.5.0",
    "litestar==2.16.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "ntlm-auth==1.5.0",
    "numpy==1.23.5",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "pbr==6.1.1",
    "pillow==11.2.1",
    "ply==3.11",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "Pygments==2.19.1",
    "pylatexenc==2.10",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "qiskit==0.43.1",
    "qiskit-aer==0.12.0",
    "qiskit-ibmq-provider==0.20.2",
    "qiskit-machine-learning==0.6.1",
    "qiskit-terra==0.24.1",
    "requests==2.32.3",
    "requests-ntlm==1.1.0",
    "rich==14.0.0",
    "ruff==0.11.9",
    "rustworkx==0.16.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "safehttpx==0.1.6",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "stevedore==5.4.1",
    "symengine==0.9.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "torch==2.7.0",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "sqlalchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.1",
    "pydantic==2.11.4",
    "alembic==1.16.1"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]